--- a/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
+++ b/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
@@ -118,7 +118,7 @@
 "TUIKitMessageTypeDraft" = "[Draft]";
 
 "TUIKitMoreCamera" = "Take Photo";
-"TUIKitMorePhoto" = "Album";
+"TUIKitMorePhoto" = "Photo";
 "TUIKitMoreVideo" = "Video";
 "TUIKitMoreLocation" = "Location";
 "TUIKitMoreFile" = "Files";
