--- a/Swift/MSIM-Swift/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
+++ b/Swift/MSIM-Swift/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
@@ -44,8 +44,8 @@
 "YesterdayDateFormat" = "HH:mma";       // 英文是 HH:mma 不要动
 
 "Read" = "Read";
-"Deliveried" = "Deliveried";
-"NotDeliveried" = "NotDeliveried";
+"Deliveried" = "Delivered";
+"NotDeliveried" = "NotDelivered";
 "Sending" = "Sending...";
 
 "Copy" = "Copy";
