--- a/Swift/MSIM-Swift/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
+++ b/Swift/MSIM-Swift/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
@@ -8,16 +8,19 @@
 "TUIKitTipsMostSelectTextFormat" = "Select %ld at most";
 
 "Home_tab" = "Spark";
-"Discovery_tab" = "Discover";
+"Discovery_tab" = "Online";
 "Message_tab" = "Message";
 "Profile_tab" = "Me";
 
 "WelcomeBack" = "WELCOME BACK";
 "LOGIN" = "LOG IN";
-"You-phone-number" = "You phone number...";
-"You-nickname" = "Nickname";
+"You-phone-number" = "you phone number is...";
+"You-nickname" = "you nickname is...";
+"You-englishname" = "you english name is...";
+"You-location" = "you office location is...";
+"You-invite-code" = "you invite code is...";
 "Next-button" = "CONTINUE";
-
+"You-depart" = "You department...";
 
 "Confirm" = "OK";
 "Cancel" = "Cancel";
@@ -111,6 +114,7 @@
 "TUIKitMessageTypeVoice" = "[Voice]";
 "TUIkitMessageTypeVideo" = "[Video]";
 "TUIkitMessageTypeLocation" = "[Location]";
+"TUIkitMessageTypeEmotion" = "[Emotion]";
 "TUIkitMessageTypeVoiceCall" = "[Voice call]";
 "TUIkitMessageTypeVideoCall" = "[Video call]";
 "TUIkitMessageTypeFile" = "[File]";
@@ -126,6 +130,7 @@
 "TUIKitMoreVideoCall" = "Video Call";
 "TUIKitMoreVoiceCall" = "Voice Call";
 "TUIKitMoreGroupLive" = "Group Live";
+"TUIKitMoreSnapchat" = "Snap Chat";
 
 "TUIKitCallInviteYouVoiceCall" = "invites you to voice call...";
 "TUIKitCallInviteYouVideoCall" = "invites you to video call...";
