添加闪照功能

--- a/Object-C/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/Object-C/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/zh-Hans.lproj/Localizable.strings
@@ -112,6 +112,7 @@
 "TUIkitMessageTypeVoiceCall" = "[语音电话]";
 "TUIkitMessageTypeVideoCall" = "[视频电话]";
 "TUIKitMessageTypeAnimateEmoji" = "[动画表情]";
+"TUIkitMessageTypeFlashImage" = "[闪图]";
 "TUIKitMessageTipsUnsupportCustomMessage" = "[自定义消息]";
 "TUIKitMessageTypeDraft" = "[草稿]";
 
