--- a/Swift/MSIM-Swift/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/zh-Hans.lproj/Localizable.strings
+++ b/Swift/MSIM-Swift/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/zh-Hans.lproj/Localizable.strings
@@ -116,6 +116,7 @@
 "TUIkitMessageTypeLocation" = "[位置]";
 "TUIkitMessageTypeVoiceCall" = "[语音电话]";
 "TUIkitMessageTypeVideoCall" = "[视频电话]";
+"TUIkitMessageTypeFlashImage" = "[闪图]";
 "TUIKitMessageTypeAnimateEmoji" = "[动画表情]";
 "TUIKitMessageTipsUnsupportCustomMessage" = "[自定义消息]";
 "TUIKitMessageTypeDraft" = "[草稿]";
