--- a/Object-C/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
+++ b/Object-C/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
@@ -110,6 +110,7 @@
 "TUIkitMessageTypeImage" = "[Image]";
 "TUIKitMessageTypeVoice" = "[Voice]";
 "TUIkitMessageTypeVideo" = "[Video]";
+"TUIkitMessageTypeFlashImage" = "[Flash Image]";
 "TUIkitMessageTypeVoiceCall" = "[Voice call]";
 "TUIkitMessageTypeVideoCall" = "[Video call]";
 "TUIkitMessageTypeFile" = "[File]";
