新增阅后即焚功能

--- a/Object-C/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
+++ b/Object-C/BlackFireIM/Example/Lib/MSIMSDK-UIKit/Resource/TUIKitResource.bundle/Localizable/en.lproj/Localizable.strings
@@ -90,6 +90,7 @@
 "TUIkitMessageTipsOthersRecallMessage" = "The other user recalled a message.";
 "TUIkitMessageTipsUnknowMessage" = "Unsupport message,please update SDK";
 "TUIkitMessageTipsTextingMessage" = "Other is texting...";
+"TUIkitMessageTipsSnapChatMessage" = "[snapchat]";
 
 "TUIKitSignalingFinishGroupChat" = "End Group Chat";
 "TUIKitSignalingVoiceCallEnd" = "call Duration: %02zd:%02zd";
